--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#242934;" />
+    <meta name="theme-color" content="#1E142F;" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -39,6 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <body style="background-color: #242934">
+    <body style="background-color: #1E142F">
   </body>
 </html>
